--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.31"
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.3",
+    "bootstrap-vue-3": "^0.5.1",
+    "vue": "^3.4.31",
+    "vue-good-table-next": "^0.2.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
